fix: z-index

--- a/src/app/slots/slots-form/slots-form.component.scss
+++ b/src/app/slots/slots-form/slots-form.component.scss
@@ -38,7 +38,7 @@
     border-radius: 50%;
     transform-origin: center;
     pointer-events: none;
-    z-index: 2;
+    z-index: 3;
   }
 
   &.filling {
